--- a/docs/inherited-diversity.Rmd
+++ b/docs/inherited-diversity.Rmd
@@ -26,7 +26,7 @@ read_graphviz_chunk("team-structures-generations", package = "gems",
 # Introduction {-}
 
 One of the fundamental processes in cultural evolution is the transmission of
-tools and other solutions to problems from one generation to the next. Cultural
+problem solving knowledge from one generation to the next. Cultural
 transmission is notoriously imperfect when compared to genetic transmission.
 Yet the human ability to transmit cultural information far exceeds the
 abilities of any non-human animals. Humans have evolved a number of abilities
@@ -34,10 +34,52 @@ that improve the success of cultural transmission, including teaching,
 language, and other social learning abilities, such as the ability to learn
 through observation. A consequence of our system of cultural inheritance is
 that problem solvers rarely have to start from scratch when solving new
-problems. Instead, they start off with the solutions that were inherited from
-a previous generation. The purpose of this research was to understand how
-inheriting from a previous generation influences future problem solving
-behavior.
+problems. Instead, they start off with the solutions that were inherited from a
+previous generation. Does the accumulation of problem solving knowledge
+impact future generations of problem solvers beyond simply giving a head start
+on future labor? The purpose of this research was to understand the conditions
+under which inheriting from a previous generation may improve future problem
+solving performance beyond what would be achieved by working alone.
+
+Although the human capacity to work together in teams to solve large problems
+is evident in many scientific and technological domains, teamwork is rarely
+considered to be an effective means of improving individual problem solving
+performance. When both teams and individuals complete tasks that individuals
+can complete alone, teamwork does not usually improve performance over what
+could have been accomplished individually. Larger teams are subject to effects
+such as social loafing that decrease motivation and performance. Larger teams
+may be inefficient for other reasons, as well. For example, on software
+development projects, adding more team members can sometimes slow the speed at
+which new changes can be implemented.
+
+A notable exception is a study by @Bahrami:2010jl who found that
+dyads were better than individuals in a perceptual judgment task. In the
+experiment, participants searched for an oddball target and responded with
+a binary judgment corresponding to which of two displays contained the target.
+If the dyad disagreed about which display contained the target, they were
+allowed to confer and make a joint decision. Because the participants made both
+individual and team responses on each trial, the researchers were able to
+compare the performance of the team to the performance of best individual in
+each team. The results showed a clear benefit to teamwork over what would have
+been achieved by the best individual in each dyad completing the task alone.
+
+Later studies have shown that dyads were able to improve team performance
+through confidence matching, which is improved by settling on a common vocabulary
+to use to communicate uncertainty, but confidence matching also occurs
+when using continuous measures of uncertainty. In confidence matching tasks,
+teamwork improves team performance over what could be achieved by the best
+individual specifically when the members of the team have the same perceptual
+ability.
+
+A difficulty that arises when comparing experiments done on teamwork
+is in how to properly control for time. The typical approach is to control
+for **calendar hours**. For example, teams and individuals are both given
+an hour to complete the same task. However, controlling for calendar hours does
+not scale with team size. Individuals and teams are both given an hour,
+regardless of the size of the team.
+
+In the experiment, we compare three strategies for solving the same problem.
+
 
 At the population level, our advanced social learning abilities enable certain
 complex traits to be sustained over generations even if the
@@ -83,44 +125,6 @@ is to compare the performance of teams to individuals working alone. When
 compared in this way, studies have often failed to find any evidence that
 teamwork provides an improvement over individual problem solving.
 
-One of the reasons teamwork is reflected rather poorly in the experimental
-literature is due to limits in experimental methods. In order to conduct an
-experiment in which both teams and individuals are administered the same task,
-many tasks are necessarily excluded because they can not be equally attempted
-using both teams and individuals. To use a clear example: if the problem
-solving task required moving heavy objects, teamwork has clear advantages, but
-no one would be surprised by these results.
-
-Teams can clearly solve many problems that are insurmountable for individuals.
-But when both teams and individuals attempt tasks that individuals can complete
-alone, teamwork is rarely found to be an improvement over individual
-performance. A notable exception is a study by @Bahrami:2010jl who found that
-dyads were better than individuals in a perceptual judgment task. In the
-experiment, participants searched for an oddball target and responded with
-a binary judgment corresponding to which of two displays contained the target.
-If the dyad disagreed about which display contained the target, they were
-allowed to confer and make a joint decision. Because the participants made both
-individual and team responses on each trial, the researchers were able to
-compare the performance of the team to the performance of best individual in
-each team. The results showed a clear benefit to teamwork over what would have
-been achieved by the best individual in each dyad completing the task alone.
-
-Later studies have shown that dyads were able to improve team performance
-through confidence matching, which is improved by settling on a common vocabulary
-to use to communicate uncertainty, but confidence matching also occurs
-when using continuous measures of uncertainty. In confidence matching tasks,
-teamwork improves team performance over what could be achieved by the best
-individual specifically when the members of the team have the same perceptual
-ability.
-
-A difficulty that arises when comparing experiments done on teamwork
-is in how to properly control for time. The typical approach is to control
-for **calendar hours**. For example, teams and individuals are both given
-an hour to complete the same task. However, controlling for calendar hours does
-not scale with team size. Individuals and teams are both given an hour,
-regardless of the size of the team.
-
-In the experiment, we compare three strategies for solving the same problem.
 
 # Methods {-}
 
